--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ Project Name: Pacific Trails Resort (HW18)
 Author: Alyssa Garcia
 Date Last Modified: may 1 2019
 GibHub User: amgarcia112
+
+minor formatting issues
 -->
 	<title>Pacific Trails Resort</title>
 	<meta charset="utf-8">
